--- a/Java/DesafioSemana8/src/main/java/DesafioSemana8/TelaCalculadora.form
+++ b/Java/DesafioSemana8/src/main/java/DesafioSemana8/TelaCalculadora.form
@@ -84,7 +84,7 @@
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
@@ -335,6 +335,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="ON"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ligarActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
